--- a/PROJEK1_alif.html
+++ b/PROJEK1_alif.html
@@ -1,15 +1,14 @@
+<!DOCTYPE html>
 <html>
- <head>
-  <style id="dcoder_stylesheet"></style>
- </head>
- <body>   
+ <head>  
+ </head> 
+ <body> 
   <title>Perkenalan Diri Siswa 10 RPL</title> 
   <h1>perkenalan diri siswa rpl</h1> 
   <p><b>Perkenalkan, nama saya <mark>Alif</mark> Saya lahir di <mark>Bandung</mark> Saat ini saya duduk di kelas 10 RPL 02 Jurusan Rekayasa Perangkat Lunak Saya tinggal di kp Banceuy rt 01 rw 08 cita cita saya pemain esport</b></p> 
   <h2>Hobi</h2> 
   <p>hobi saya disini saya suka bermain <i>Game</i> yaitu. <mark><br>MOBILE LEGENDS</mark> karna saya ingin memasuki dunia <mark>esports</mark> karna saya mempunyai idola yang saya sukai dan saya kagumi karna sangat jago bermain gamenya yaitu bernama <mark>kairi</mark></p> 
-  <h3>Sekian perkenalan dari saya</h3>
-  <h3>   </h3>
-  <script id="dcoder_script"></script>
+  <h3>Sekian perkenalan dari saya</h3> 
+  <h3> </h3>   
  </body>
 </html>
